[gd_scene load_steps=7 format=3 uid="uid://n2lyt2kk8fs1"]

[ext_resource type="Script" uid="uid://7u8elwwxjddm" path="res://scenes/MainScreen/main_screen.gd" id="1_vdkdl"]
[ext_resource type="Texture2D" uid="uid://sma1olhc6xnt" path="res://assets/menu/home.png" id="2_ev6am"]
[ext_resource type="Texture2D" uid="uid://bubpj0wuknv46" path="res://assets/menu/editor.png" id="3_md0e8"]
[ext_resource type="Texture2D" uid="uid://ugk86yyoa2we" path="res://assets/menu/achievement.png" id="4_6rp41"]
[ext_resource type="Texture2D" uid="uid://bvy6gevhw38d5" path="res://assets/menu/progress.png" id="5_ednn8"]
[ext_resource type="Texture2D" uid="uid://bfsxoeuenr88y" path="res://assets/menu/profile.png" id="6_jypd3"]

[node name="MainScreen" type="Node2D"]
script = ExtResource("1_vdkdl")

[node name="MapContainer" type="Node2D" parent="."]
unique_name_in_owner = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
custom_minimum_size = Vector2(0, 96)
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0
size_flags_vertical = 8
color = Color(0.14902, 0.14902, 0.14902, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TopPanel" type="Panel" parent="CanvasLayer/VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="Spacer" type="Control" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 1

[node name="BottomMenu" type="HBoxContainer" parent="CanvasLayer/VBoxContainer"]
custom_minimum_size = Vector2(0, 96)
layout_mode = 2

[node name="HomeButton" type="TextureButton" parent="CanvasLayer/VBoxContainer/BottomMenu"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
texture_normal = ExtResource("2_ev6am")

[node name="EditorButton" type="TextureButton" parent="CanvasLayer/VBoxContainer/BottomMenu"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
texture_normal = ExtResource("3_md0e8")

[node name="AchieveButton" type="TextureButton" parent="CanvasLayer/VBoxContainer/BottomMenu"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
texture_normal = ExtResource("4_6rp41")

[node name="ProgressButton" type="TextureButton" parent="CanvasLayer/VBoxContainer/BottomMenu"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
texture_normal = ExtResource("5_ednn8")

[node name="ProfileButton" type="TextureButton" parent="CanvasLayer/VBoxContainer/BottomMenu"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
texture_normal = ExtResource("6_jypd3")

[connection signal="pressed" from="CanvasLayer/VBoxContainer/BottomMenu/HomeButton" to="." method="_on_home_button_pressed"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/BottomMenu/EditorButton" to="." method="_on_editor_button_pressed"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/BottomMenu/AchieveButton" to="." method="_on_achieve_button_pressed"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/BottomMenu/ProgressButton" to="." method="_on_progress_button_pressed"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/BottomMenu/ProfileButton" to="." method="_on_profile_button_pressed"]
